# umicom-authorengine-ai

./: .editorconfig  .env.example-ollama  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING-ADDENDUM.md  CONTRIBUTING.md  LICENSE  PRERELEASE.md  README-ADD-DevSetup.md  README-ADD-LLM.md  README-ADD-Ollama.md  README-ADD-Phase2B-llm-selftest-v2.md  README-ADD-Phase2B-llm-selftest.md  README-ADD-llamacpp.md  README-BUILD.md  README-EMBED-llamacpp.md  README.md  README_CODESRAL.md  RELEASE_NOTES_v0.1.4.md  SECURITY.md  clang-format  release-drafter.yml
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  clang-tidy.yml  codeql.yml  format-check.yml  release.yml  sanitizers.yml  smoke-runner.yml  smoke.yml  test-smoke.yml  windows-smoke.yml
cmake/: UENGLlama.cmake  providers.cmake  umicom-helpers.cmake
config/: ueng.yaml
docker/: build-in-docker.sh  docker-compose.ollama.yaml  ubuntu.Dockerfile
docs/: ARCHITECTURE-PHASE2.md  Architecture.md  CLI.md  CODEMAP.md  CONTRIBUTING.md  Contributing-Guide.md  DEVELOPMENT.md  Getting-Started.md  LLM-INTEGRATION.md  LLM-INTEGRATIONS.md  LLM-PLUGINS.md  LLM_BACKENDS.md  Packaging.md  README.md  ROADMAP.md  STYLE-NOTES.md
docs/dev/: README.md  UAEngine-quickstart.md  backup-and-recovery.md  contributing-tooling.md  dev-folders-layout.md  fix-main-stray-backslash.md  main-pandoc-fix-notes.md
docs/llm/: lm-studio-notes.md
docs/pr/: PR-text.md
docs/release/: macos-notarization.md
examples/prompts/: hello.txt
include/ueng/: common.h  config.h  fs.h  llm.h  llm_mistral.h  serve.h  version.h  version.hpp
packaging/: calc_hashes_from_release.ps1  checksum.ps1  uaengine.json  uaengine.rb
patches/: 0004-fix-main-pandoc-input.patch  0005-fix-main-stray-backslash.patch  CMakeLists_add_mistral.diff  cmake_add_ueng_config.patch  main-add-help.patch  ueng_config_add_env.diff
scripts/: README-RUN-HELPERS.md  book.yaml  build.ps1  make-pdf.ps1  make-pdf.sh  run-uaengine.ps1  run-uaengine.sh
scripts/bootstrap/: bootstrap.ps1  bootstrap.sh
scripts/dev/: format-all.ps1  format-all.sh  smoke-help.ps1  smoke-help.sh
scripts/fix/: add-help.ps1  add-help.sh  add-llm-selftest.ps1  add-llm-selftest.sh  apply-export-serve-fixes.ps1  apply-export-serve-fixes.sh  fix-main-pandoc.ps1  fix-main-pandoc.sh  fix-main-stray-backslash.ps1  fix-main-stray-backslash.sh
scripts/llm/: llamacpp-build.ps1  llamacpp-build.sh  llamacpp-smoke.ps1  llamacpp-smoke.sh  llamacpp-start.ps1  llamacpp-start.sh  ollama-setup.ps1  ollama-setup.sh  ollama-smoke.ps1  ollama-smoke.sh  start-ollama.ps1  start-ollama.sh
scripts/outputs/my-new-book/2025-09-29/html/: book.html  style.css
scripts/outputs/my-new-book/2025-09-29/site/: index.html
scripts/release/: package-unix.sh  package-win.ps1
scripts/setup/am21_bundle/: README.md  am21-defender.ps1  am21-install.ps1
scripts/setup/linux/: arch-setup.sh  bootstrap.sh  fedora-setup.sh  ubuntu-setup.sh
scripts/setup/macos/: brew-setup.sh
scripts/setup/windows/: defender-exclusions.ps1  install.ps1  msys2-gtk4-notes.md  wsl-ubuntu-setup.sh
scripts/workspace/: book-draft.md  frontcover.md
snippets/: llm_selftest.c  main_integration.txt
src/: common.c  fs.c  llm_llama.c  llm_mistral.c  llm_ollama.c  llm_openai.c  main.c  main.cpp  serve.c  ueng_config.c  ueng_mistral.env.example
src/providers/: llm_ollama.c  llm_openai.c
tests/smoke/: smoke.ps1  smoke.sh
tools/: build.ps1  export.ps1  install.ps1  make.ps1  pack.ps1  uninstall.ps1
